--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
 name = Mopidy-Market
-version = 0.5
+version = 0.6
 url = https://github.com/stffart/mopidy-market
 author = stffart
 author_email = stffart@gmail.com
 license = Apache License, Version 2.0
 license_file = LICENSE
 description = Mopidy extensions configuration UI
-long_description = file: README.rst
+long_description = file: README.md
 classifiers =
     Environment :: No Input/Output (Daemon)
     Intended Audience :: End Users/Desktop
