--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = Mopidy-Market
-version = 0.7
+version = 0.7.3
 url = https://github.com/stffart/mopidy-market
 author = stffart
 author_email = stffart@gmail.com
@@ -27,7 +27,8 @@ install_requires =
     Mopidy >= 3.0.0
     Pykka >= 2.0.1
     setuptools
-
+    beautifulsoup4 >= 4.11
+    ConfigUpdater >= 3.0
 
 [options.extras_require]
 lint =
